@@ -59,8 +59,8 @@ monster_max_aspd: 199
 //        the same skill, instead, only to that particular entry (eg: Mob has heal
 //        on six lines in the mob_skill_db, only the entry that is actually used
 //        will receive the delay). This will make monsters harder, especially MvPs.
-// 0x400: By default mobs have a range of 9 for all skills. Set this to enforce
-//        the normal skill range rules on them.
+// 0x400: Set this to make mobs have a range of 9 for all skills. Otherwise, they 
+//        will obey the normal skill range rules.
 // Example: 0x140 -> Chase players through warps + use skills in random order.
 monster_ai: 0
 
